--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "author": "Saurish Kar",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   },
   "devDependencies": {
